--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WhiteBoard</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
@@ -46,6 +47,13 @@
                 <div class="undo-redo">
                     <div class="undo"><span class="material-icons"> undo </span></div>
                     <div class="redo"><span class="material-icons"> redo </span></div>
+                </div>
+            </div>
+
+            <div class="eraser-pen-section">
+                <div class="eraser-pen">
+                    <div class="pen"><span class="material-icons"> edit </span></div>
+                    <div class="eraser"><i class="fa fa-eraser"></i></div>
                 </div>
             </div>
 
