--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <div class="header">
             <div class="color-section">
                 <div class="colors">
-                    <div class="col1"></div>
-                    <div class="col2"></div>
-                    <div class="col3"></div>
-                    <div class="col4"></div>
-                    <div class="col5"></div>
+                    <div class="black colour-selected"></div>
+                    <div class="red"></div>
+                    <div class="yellow"></div>
+                    <div class="green"></div>
+                    <div class="blue"></div>
                 </div>
             </div>
             <div class="marker-width-section">
                 <div class="marker-width">
-                    <div class="w1"><span class="l1"></span></div>
+                    <div class="w1 width-selected"><span class="l1"></span></div>
                     <div class="w2"><span class="l2"></span></div>
                     <div class="w3"><span class="l3"></span></div>
                 </div>
@@ -50,10 +50,18 @@
                 </div>
             </div>
 
+            <div class="shapes-section">
+                <div class="shapes">
+                    <div class="line"><span class="material-icons"> north_west </span></div>
+                    <div class="rectangle"><span class="material-icons"> crop_square </span></div>
+                    <div class="circle"><span class="material-icons"> radio_button_unchecked </span></div>
+                    <div class="triangle"><span class="material-icons"> change_history </span></div>
+                </div>
+            </div>
+
             <div class="eraser-pen-section">
                 <div class="eraser-pen">
-                    <div class="pen"><span class="material-icons"> edit </span></div>
-                    <div class="eraser"><i class="fa fa-eraser"></i></div>
+                    <div class="eraser"><span class="material-icons"> delete </span></div>
                 </div>
             </div>
 
