Added Download Button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -21,6 +24,8 @@
                     <div class="blue"></div>
                 </div>
             </div>
+            <div class="title-colours">Colours</div>
+
             <div class="marker-width-section">
                 <div class="marker-width">
                     <div class="w1 width-selected"><span class="l1"></span></div>
@@ -28,6 +33,8 @@
                     <div class="w3"><span class="l3"></span></div>
                 </div>
             </div>
+            <div class="title-width">Pen Width</div>
+
             <div class="eraser-section">
                 <div class="eraser-width">
                     <div class="ew1"><span class="c1"></span></div>
@@ -35,6 +42,7 @@
                     <div class="ew3"><span class="c3"></span></div>
                 </div>
             </div>
+            <div class="title-eraser">Eraser</div>
 
             <div class="undo-redo-section">
                 <div class="undo-redo">
@@ -42,6 +50,8 @@
                     <div class="redo"><span class="material-icons"> redo </span></div>
                 </div>
             </div>
+            <div class="title-undo">Undo</div>
+            <div class="title-redo">Redo</div>
 
             <div class="shapes-section">
                 <div class="shapes">
@@ -51,12 +61,21 @@
                     <div class="triangle"><span class="material-icons"> change_history </span></div>
                 </div>
             </div>
+            <div class="title-shapes">Shapes</div>
 
             <div class="eraser-pen-section">
                 <div class="eraser-pen">
                     <div class="eraser"><span class="material-icons"> delete </span></div>
                 </div>
             </div>
+            <div class="title-delete">Clear All</div>
+
+            <div class="download-section">
+                <div class="download">
+                    <div class="download-option"><span class="material-icons"> download </span></div>
+                </div>
+            </div>
+            <div class="title-download">Download</div>
 
         </div>
         <canvas></canvas>
