Undo-Redo Working

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
             </div>
             <div class="title-download">Download</div>
 
+            <!-- <input type="file" name="" id=""> -->
+
         </div>
         <canvas></canvas>
     </div>
