Image Uploading added

--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
             <div class="title-undo">Undo</div>
             <div class="title-redo">Redo</div>
 
-            <div class="shapes-section">
-                <div class="shapes">
-                    <div class="line"><span class="material-icons"> north_west </span></div>
-                    <div class="rectangle"><span class="material-icons"> crop_square </span></div>
-                    <div class="circle"><span class="material-icons"> radio_button_unchecked </span></div>
-                    <div class="triangle"><span class="material-icons"> change_history </span></div>
-                </div>
-            </div>
-            <div class="title-shapes">Shapes</div>
-
             <div class="eraser-pen-section">
                 <div class="eraser-pen">
                     <div class="eraser"><span class="material-icons"> delete </span></div>
                 </div>
             </div>
             <div class="title-delete">Clear All</div>
+
+            <input type="file" name="" id="file" style="display: none;">
+                <div class="upload-section">
+                <label for="file">
+                    <div class="upload">
+                        <div class="upload-option"><span class="material-icons"> upload </span></div>
+                    </div>
+                </label>
+                </div>
+            <div class="title-upload">Upload</div>
 
             <div class="download-section">
                 <div class="download">
